--- a/coursework/index.html
+++ b/coursework/index.html
@@ -11,7 +11,7 @@
 
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Homrrrre</a></li>
                 <li><a href="contact_us.html">Contact Us</a></li>
                 <li><a href="event_calendar.html">Our Events</a></li>
                 <li><a href="img_gallery.html">Photo Gallery</a></li>
