--- a/coursework/contact_us.html
+++ b/coursework/contact_us.html
@@ -19,7 +19,30 @@
             </ul>
         </nav>
 
-        <main></main>
+        <main>
+            <div>
+                <form>
+                    <fieldset>
+                        <legend>Contact Us using the below form.</legend>
+
+                        <label for="name">Name:</label>
+                        <input type="text" name="name" value=""/> <br/>
+
+                        <label for="email">Email Address:</label>
+                        <input type="text" name="email" value=""/> <br/>
+
+                        <label for="membership">Membership Status (YES/NO)</label>
+                        <input type="checkbox" name="membership" value=""/> <br/>
+
+                        <label for="contact_reason">Reason for contacting us:</label>
+                        <input type="text" name="contact_reason" value=""/> <br/>
+
+
+                         
+                    </fieldset>
+                </form>
+            </div>
+        </main>
 
         <aside></aside>
 
