--- a/coursework/event_calendar.html
+++ b/coursework/event_calendar.html
@@ -19,7 +19,142 @@
             </ul>
         </nav>
 
-        <main></main>
+        <main>
+            <div>
+                <table>
+                    <tr>
+                        <td></td>
+                        <th>Monday</th>
+                        <th>Tuesday</th>
+                        <th>Wednesday</th>
+                        <th>Thursday</th>
+                        <th>Friday</th>
+                        <th>Saturday</th>
+                        <th>Sunday</th>
+                    </tr>
+
+                    <tr>
+                        <th>W1</th>
+                        <td></td>
+                        <td></td>
+                        <td>Weekly Meeting @ 1pm, Riverside Building</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+
+                    <tr>
+                        <th>W2</th>
+                        <td></td>
+                        <td></td>
+                        <td>Weekly Meeting @ 1pm, Riverside Building</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+
+                    <tr>
+                        <th>W3</th>
+                        <td></td>
+                        <td></td>
+                        <td>Weekly Meeting @ 1pm, Riverside Building</td>
+                        <td>Google Form for this months cafe choice opens</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+
+                    <tr>
+                        <th>W4</th>
+                        <td></td>
+                        <td></td>
+                        <td>Weekly Meeting @ 1pm, Riverside Building</td>
+                        <td>Google Form for this months cafe choice closes</td>
+                        <td></td>
+                        <td>Monthly cafe visit</td>
+                        <td></td>
+                    </tr>
+
+                    <tr>
+                        <th>W5</th>
+                        <td></td>
+                        <td></td>
+                        <td>Weekly Meeting @ 1pm, Riverside Building</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+
+                    <tr>
+                        <th>W6</th>
+                        <td></td>
+                        <td></td>
+                        <td>Weekly Meeting @ 1pm, Riverside Building</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+
+                    <tr>
+                        <th>W7</th>
+                        <td></td>
+                        <td></td>
+                        <td>Weekly Meeting @ 1pm, Riverside Building</td>
+                        <td>Google Form for this months cafe choice opens</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+
+                    <tr>
+                        <th>W8</th>
+                        <td></td>
+                        <td></td>
+                        <td>Weekly Meeting @ 1pm, Riverside Building</td>
+                        <td>Google Form for this months cafe choice closes</td>
+                        <td></td>
+                        <td>Monthly cafe visit</td>
+                        <td></td>
+                    </tr>
+
+                    <tr>
+                        <th>W9</th>
+                        <td></td>
+                        <td></td>
+                        <td>Weekly Meeting @ 1pm, Riverside Building</td>
+                        <td>Google Form for this months cafe choice opens</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+
+                    <tr>
+                        <th>W10</th>
+                        <td>Easter Holiday</td>
+                    </tr>
+
+                    <tr>
+                        <th>W11</th>
+                        <td>Exam Week</td>
+                    </tr>
+                    
+                    <tr>
+                        <th>W12</th>
+                        <td></td>
+                        <td></td>
+                        <td>Weekly Meeting @ 1pm, Riverside Building. End of term craft presentation. Time to show off your work!</td>
+                        <td>Google Form for this months cafe choice closes</td>
+                        <td></td>
+                        <td>Final cafe visit of semester</td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
+        </main>
 
         <aside></aside>
 
