--- a/coursework/img_gallery.html
+++ b/coursework/img_gallery.html
@@ -19,7 +19,18 @@
             </ul>
         </nav>
 
-        <main></main>
+        <main>
+            <img src="images/crochet_bears.jpg" alt="An image of several crocheted bears in a variety of colours">
+            <img src="images/embroidery.jpg" alt="An image of a cross stitch project depicting a colourful shopfront">
+            <img src="images/knitting.jpg" alt="An image of a knitted blanket with colourful stripes">
+            <img src="images/crochet_bunny.jpg" alt="An image of a grey crocheted bunny sitting on grass and surrounded by daisies">
+            <img src="images/crochet_hearts.jpg" alt="An image of several pink white and grey crocheted hearts surrounded by daisies">
+            <img src="images/paper_craft.jpg" alt="An image of people making colourful flowers and leaves out of paper">
+            <img src="images/person_crochet.jpg" alt="An image of a person crocheting">
+            <img src="images/threads.jpg" alt="An image of various embroidery threads in different colours">
+            <img src="images/toys.jpg" alt="An image of a basket filled with stuffed bears, sitting next to a pile of folded fabrics">
+            <img src="images/sewing.jpg" alt="An image of various different embroidery projects and embroidery threads">
+        </main>
 
         <aside></aside>
 
