--- a/coursework/current_members.html
+++ b/coursework/current_members.html
@@ -6,7 +6,9 @@
     <body>
         
         <header>
-            <h1>Grandeur Guild of Crafts</h1>
+            <img src="images/logo.png" alt="The logo of the society. A badge with a ball of yarn on it" id="logo">
+            <h1 id="title">Grandeur Guild of Crafts</h1>
+            <link rel='stylesheet' href='css/main.css'>
         </header>
 
         <nav>
@@ -15,7 +17,7 @@
                 <li><a href="contact_us.html">Contact Us</a></li>
                 <li><a href="event_calendar.html">Our Events</a></li>
                 <li><a href="img_gallery.html">Photo Gallery</a></li>
-                <li><a href="current_members.html">Our Members</a></li>
+                <li class="active"><a href="current_members.html">Our Members</a></li>
             </ul>
         </nav>
 
@@ -23,7 +25,9 @@
 
         <aside></aside>
 
-        <footer></footer>
+        <footer>
+            <p>COPYRIGHT: CALLA AITKEN</p>
+        </footer>
     
     </body>
 </html>
