--- a/coursework/current_members.html
+++ b/coursework/current_members.html
@@ -1,27 +1,82 @@
-<html>
+<!DOCTYPE html>
+<html lang ="en">
     <head>
         <title>Grandeur Guild of Crafts</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <link rel='stylesheet' href='css/main.css'>
+        <script src="scripts/main.js"></script>
     </head>
 
     <body>
-        
         <header>
-            <img src="images/logo.png" alt="The logo of the society. A badge with a ball of yarn on it" id="logo">
-            <h1 id="title">Grandeur Guild of Crafts</h1>
-            <link rel='stylesheet' href='css/main.css'>
+            <!--Society logo and name-->
+            <div class="logo-and-name">
+                <img src="images/logo.png" alt="The logo of the society. A badge with a ball of yarn on it" id="logo">
+                <h1 id="title">Grandeur Guild of Crafts</h1>
+            </div>
+
+            <!--Form for logging in-->
+            <div class="login-form">
+                <form>
+                    <fieldset class="login-fieldset">
+                        <div class="login-input">
+                            <input type="text" name="email" placeholder="Email:">
+                        </div>
+                        <div class="login-input">
+                            <input type="text" name="Password" placeholder="Password:">
+                        </div>
+                        <button type="button" onclick='login("login_button")' id="login_button">
+                            Login
+                        </button>
+                    </fieldset>
+                </form>
+            </div>
         </header>
 
+    <!--List of links for navigation-->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="contact_us.html">Contact Us</a></li>
+                <li><a href="contact_us.html">Contact Us</a></li> 
                 <li><a href="event_calendar.html">Our Events</a></li>
                 <li><a href="img_gallery.html">Photo Gallery</a></li>
-                <li class="active"><a href="current_members.html">Our Members</a></li>
+                <li class="active"><a href="current_members.html">Our Members</a></li> <!--Current Page-->
             </ul>
         </nav>
 
-        <main></main>
+        <main>
+            <!--Container for all member titles, images and names-->
+            <div class="members-container">
+                <div class="row">
+                    <div class="col-sm">
+                        <h2 class="member-title">Guild Master</h2>
+                        <img src="images/member1.jpg" alt="An image of Sarah, our guild master, sewing" class="rounded-circle massie-hovering member-img">
+                        <h3 class="member-name">Sarah</h3>
+                    </div>
+                    <div class="col-sm">
+                        <h2 class="member-title">Master Craftsman</h2>
+                        <img src="images/member2.jpeg" alt="An image of Julia, our master craftsman, holding balls of yarn" class="rounded-circle massie-hovering member-img">
+                        <h3 class="member-name">Julia</h3>
+                    </div>
+                    <div class="col-sm">
+                        <h2 class="member-title">Journeyman</h2>
+                        <img src="images/member3.jpg" alt="An image of Nathaniel, our journeyman, holding a t-shirt" class="rounded-circle massie-hovering member-img">
+                        <h3 class="member-name">Nathaniel</h3>
+                    </div>
+                    <div class="col-sm">
+                        <h2 class="member-title">Apprentice</h2>
+                        <img src="images/member4.jpg" alt="An image of Mildred, our apprentice, gazing logingly at a sewing machine" class="rounded-circle massie-hovering member-img">
+                        <h3 class="member-name">Mildred</h3>
+                    </div>
+                    <div class="col-sm">
+                        <h2 class="member-title">Treasurer</h2>
+                        <img src="images/member5.jpg" alt="An image of Kayla, our treasurer, holding a crocheted bear" class="rounded-circle massie-hovering member-img">
+                        <h3 class="member-name">Kayla</h3>
+                    </div>
+                </div>
+            </div>
+        </main>
 
         <aside></aside>
 
