--- a/coursework/event_calendar.html
+++ b/coursework/event_calendar.html
@@ -1,21 +1,45 @@
-<html>
+<!DOCTYPE html>
+<html lang ="en">
     <head>
         <title>Grandeur Guild of Crafts</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <link rel='stylesheet' href='css/main.css'>
+        <script src="scripts/main.js"></script>
     </head>
 
     <body>
-        
         <header>
-            <img src="images/logo.png" alt="The logo of the society. A badge with a ball of yarn on it" id="logo">
-            <h1 id="title">Grandeur Guild of Crafts</h1>
-            <link rel='stylesheet' href='css/main.css'>
+            <!--Society logo and name-->
+            <div class="logo-and-name">
+                <img src="images/logo.png" alt="The logo of the society. A badge with a ball of yarn on it" id="logo">
+                <h1 id="title">Grandeur Guild of Crafts</h1>
+            </div>
+
+            <!--Form for logging in-->
+            <div class="login-form">
+                <form>
+                    <fieldset class="login-fieldset">
+                        <div class="login-input">
+                            <input type="text" name="email" placeholder="Email:">
+                        </div>
+                        <div class="login-input">
+                            <input type="text" name="Password" placeholder="Password:">
+                        </div>
+                        <button type="button" onclick='login("login_button")' id="login_button">
+                            Login
+                        </button>
+                    </fieldset>
+                </form>
+            </div>
         </header>
 
+    <!--List of links for navigation-->
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="contact_us.html">Contact Us</a></li>
-                <li class="active"><a href="event_calendar.html">Our Events</a></li>
+                <li ><a href="contact_us.html">Contact Us</a></li> 
+                <li class="active"><a href="event_calendar.html">Our Events</a></li> <!--Current Page-->
                 <li><a href="img_gallery.html">Photo Gallery</a></li>
                 <li><a href="current_members.html">Our Members</a></li>
             </ul>
@@ -23,7 +47,9 @@
 
         <main>
             <div>
+                <!--Table with eight columns, 13 rows-->
                 <table>
+                    <!--Table row with column headers-->
                     <tr>
                         <td></td>
                         <th>Monday</th>
