--- a/coursework/event_calendar.html
+++ b/coursework/event_calendar.html
@@ -42,6 +42,8 @@
                 <li class="active"><a href="event_calendar.html">Our Events</a></li> <!--Current Page-->
                 <li><a href="img_gallery.html">Photo Gallery</a></li>
                 <li><a href="current_members.html">Our Members</a></li>
+                <li ><a href="patterns.html">Patterns</a></li> 
+                <li ><a href="supplies.html">Supplies</a></li> 
             </ul>
         </nav>
 
