--- a/coursework/current_members.html
+++ b/coursework/current_members.html
@@ -6,7 +6,22 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <link rel='stylesheet' href='css/main.css'>
         <script src="scripts/main.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
     </head>
+
+<!--
+Threat Model
+Threat Source: External
+Threat Agent: Human
+Threat Intention: Intentional
+Threat Motivation: Embarrassment of the society
+Threat Impact: Defacement of society website, changing of members 
+images, possible identify theft of members.
+Threat Mitigation: Login validation, 2FA in place before member images 
+can be changed, email updates to members whose images have been changed. 
+-->
 
     <body>
         <header>
@@ -18,13 +33,13 @@
 
             <!--Form for logging in-->
             <div class="login-form">
-                <form>
+                <form name="login-form">
                     <fieldset class="login-fieldset">
                         <div class="login-input">
-                            <input type="text" name="email" placeholder="Email:">
+                            <input type="text" id="login-email" placeholder="Email:">
                         </div>
                         <div class="login-input">
-                            <input type="text" name="Password" placeholder="Password:">
+                            <input type="text" id="password" placeholder="Password:">
                         </div>
                         <button type="button" onclick='login("login_button")' id="login_button">
                             Login
@@ -43,35 +58,37 @@
                 <li><a href="img_gallery.html">Photo Gallery</a></li>
                 <li class="active"><a href="current_members.html">Our Members</a></li> <!--Current Page-->
                 <li ><a href="patterns.html">Patterns</a></li> 
-                <li ><a href="supplies.html">Supplies</a></li> 
+                <li ><a href="resources.html">Useful Resources</a></li> 
             </ul>
         </nav>
 
         <main>
             <!--Container for all member titles, images and names-->
             <div class="members-container">
-                <div class="row">
-                    <div class="col-sm">
+                <div class="members-row">
+                    <div class="member">
                         <h2 class="member-title">Guild Master</h2>
                         <img src="images/member1.jpg" alt="An image of Sarah, our guild master, sewing" class="rounded-circle massie-hovering member-img">
                         <h3 class="member-name">Sarah</h3>
                     </div>
-                    <div class="col-sm">
+                    <div class="member">
                         <h2 class="member-title">Master Craftsman</h2>
                         <img src="images/member2.jpeg" alt="An image of Julia, our master craftsman, holding balls of yarn" class="rounded-circle massie-hovering member-img">
                         <h3 class="member-name">Julia</h3>
                     </div>
-                    <div class="col-sm">
+                    <div class="member">
                         <h2 class="member-title">Journeyman</h2>
                         <img src="images/member3.jpg" alt="An image of Nathaniel, our journeyman, holding a t-shirt" class="rounded-circle massie-hovering member-img">
                         <h3 class="member-name">Nathaniel</h3>
                     </div>
-                    <div class="col-sm">
+                </div>
+                <div class="members-row">
+                    <div class="member">
                         <h2 class="member-title">Apprentice</h2>
                         <img src="images/member4.jpg" alt="An image of Mildred, our apprentice, gazing logingly at a sewing machine" class="rounded-circle massie-hovering member-img">
                         <h3 class="member-name">Mildred</h3>
                     </div>
-                    <div class="col-sm">
+                    <div class="member">
                         <h2 class="member-title">Treasurer</h2>
                         <img src="images/member5.jpg" alt="An image of Kayla, our treasurer, holding a crocheted bear" class="rounded-circle massie-hovering member-img">
                         <h3 class="member-name">Kayla</h3>
@@ -80,10 +97,8 @@
             </div>
         </main>
 
-        <aside></aside>
-
         <footer>
-            <p>COPYRIGHT: CALLA AITKEN</p>
+            <p>&copy; GRANDEUR GUILD OF CRAFTS - CALLA AITKEN 2024</p>
         </footer>
     
     </body>
