--- a/coursework/index.html
+++ b/coursework/index.html
@@ -7,7 +7,30 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <link rel='stylesheet' href='css/main.css'>
         <script src="scripts/main.js"></script>
+
+        <!--Header Font-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
+
+        <!--Body Text Font-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Handlee&family=Krub:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Mate+SC&family=Snippet&display=swap" rel="stylesheet">
     </head>
+
+<!--
+Threat Model
+Threat Source: External
+Threat Agent: Human
+Threat Intention: Intentional
+Threat Motivation: Embarrassment of the society, leaking of society information
+Threat Impact: Defacement of society website, changing of members 
+details, possible theft of member accounts, unauthroised access to society information.
+Threat Mitigation: Login validation, Secure storing of member details, emails sent to members 
+before details can be changed, emails sent to members when someone logs into their account
+
+-->
 
     <body>
         <header>
@@ -19,13 +42,13 @@
 
             <!--Form for logging in-->
             <div class="login-form">
-                <form>
+                <form name="login-form">
                     <fieldset class="login-fieldset">
                         <div class="login-input">
-                            <input type="text" name="email" placeholder="Email:">
+                            <input type="text" id="login-email" placeholder="Email:">
                         </div>
                         <div class="login-input">
-                            <input type="text" name="Password" placeholder="Password:">
+                            <input type="text" id="password" placeholder="Password:">
                         </div>
                         <button type="button" onclick='login("login_button")' id="login_button">
                             Login
@@ -44,14 +67,14 @@
                 <li><a href="img_gallery.html">Photo Gallery</a></li>
                 <li ><a href="current_members.html">Our Members</a></li> 
                 <li ><a href="patterns.html">Patterns</a></li> 
-                <li ><a href="supplies.html">Supplies</a></li> 
+                <li ><a href="resources.html">Useful Resources</a></li> 
             </ul>
         </nav>
 
-        <main>
+        <main class="home-page">
             <!--Div containing p elements for society description-->
-            <div>
-                <h3>About Us</h3>
+            <div class="home-text">
+                <h2>About Us</h2>
                 <p>A group for all those with an interest in crafts! Whether its crochet, embroidery, paper craft, or something else entirely, everyone is welcome to come to our meetings to have a chat while working on their respective projects.</p> 
                 <p>We hold meetings once a week that are open to everyone. Even if you dont have a craft project, feel free to come along to have a chat. These meetings are usually held in one of the RGU buildings, but once a month we hold a vote for a local cafe and hold a meeting there</p>   
             </div>
@@ -105,8 +128,17 @@
             </div>
         </main>
 
-        <aside>
-            <h3>Latest News</h3>
+        <aside class="news-section">
+            <h2>Latest News</h2>
+
+            <div class="news-article">
+                <img class="news-image"  src="images/news-image.jpg" alt="An cross stitched red eye tree frog peering round a wall">
+                <div class="news-text">
+                    <h3 class="news-headline">RGU Craft Fair</h3>
+                    <p>On Friday the 29th of March, we will be hosting a craft fair in the SIWB.</p>
+                    <p>Contributions from members would be greatly appreciated, please email s.harris8@rgu.ac.uk if interested.</p>
+                </div>
+            </div>
         </aside>
     
         <footer>
