--- a/coursework/patterns.html
+++ b/coursework/patterns.html
@@ -6,6 +6,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <link rel='stylesheet' href='css/main.css'>
         <script src="scripts/main.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -18,13 +21,13 @@
 
             <!--Form for logging in-->
             <div class="login-form">
-                <form>
+                <form name="login-form">
                     <fieldset class="login-fieldset">
                         <div class="login-input">
-                            <input type="text" name="email" placeholder="Email:">
+                            <input type="text" id="login-email" placeholder="Email:">
                         </div>
                         <div class="login-input">
-                            <input type="text" name="Password" placeholder="Password:">
+                            <input type="text" id="password" placeholder="Password:">
                         </div>
                         <button type="button" onclick='login("login_button")' id="login_button">
                             Login
@@ -43,7 +46,7 @@
                 <li><a href="img_gallery.html">Photo Gallery</a></li>
                 <li><a href="current_members.html">Our Members</a></li>
                 <li class="active"><a href="patterns.html">Patterns</a></li> <!--Current Page-->
-                <li ><a href="supplies.html">Supplies</a></li> 
+                <li ><a href="resources.html">Useful Resources</a></li> 
             </ul>
         </nav>
 
@@ -51,7 +54,7 @@
             <h2 class="pattern-type-header">Crochet Patterns</h2>
             <div class="patterns-section">
                 <div class="pattern">
-                    <img src="images/crochet-dinosaurs.jpg" alt="An image of colourful crocheted dinosaurs">
+                    <img class="pattern-image" src="images/crochet-dinosaurs.jpg" alt="An image of colourful crocheted dinosaurs">
                     <div class="pattern-text">
                         <h3 class="pattern-name">Colourful Mini Dino</h3>
                         <p><b>Difficulty:</b> Beginner</p>
@@ -64,7 +67,7 @@
                 </div>
 
                 <div class="pattern">
-                    <img src="images/crochet-blanket.jpeg" alt="An image of a brown and white blanket">
+                    <img class="pattern-image"  src="images/crochet-blanket.jpeg" alt="An image of a brown and white blanket">
                     <div class="pattern-text">
                         <h3 class="pattern-name">Crochet Weighted Blanket</h3>
                         <p><b>Difficulty:</b> Beginner</p>
@@ -77,7 +80,7 @@
                 </div>
 
                 <div class="pattern">
-                    <img src="images/crochet-flowers.jpg" alt="An image of several different kinds of crocheted flowers">
+                    <img class="pattern-image"  src="images/crochet-flowers.jpg" alt="An image of several different kinds of crocheted flowers">
                     <div class="pattern-text">
                         <h3 class="pattern-name">Crochet Flower Collection</h3>
                         <p><b>Difficulty:</b> Intermediate</p>
@@ -90,7 +93,7 @@
                 </div>
 
                 <div class="pattern">
-                    <img src="images/crochet-bag.jpg" alt="An image of a purple crocheted backpack">
+                    <img class="pattern-image"  src="images/crochet-bag.jpg" alt="An image of a purple crocheted backpack">
                     <div class="pattern-text">
                         <h3 class="pattern-name">Tidal Mini Backpack</h3>
                         <p><b>Difficulty:</b> Intermediate</p>
@@ -106,7 +109,7 @@
             <h2 class="pattern-type-header">Knitting Patterns</h2>
             <div class="patterns-section">
                 <div class="pattern">
-                    <img src="images/knitted-cardigan.jpg" alt="An image of a woman wearing a yellow knitted cardigan">
+                    <img class="pattern-image"  src="images/knitted-cardigan.jpg" alt="An image of a woman wearing a yellow knitted cardigan">
                     <div class="pattern-text">
                         <h3 class="pattern-name">Cable Knit Cardigan</h3>
                         <p><b>Stitch Gauge:</b> 20 stitches per 4 inches</p>
@@ -119,7 +122,7 @@
                 </div>
                 
                 <div class="pattern">
-                    <img src="images/knitted-snail.jpg" alt="An image of a knitted snail">
+                    <img class="pattern-image"  src="images/knitted-snail.jpg" alt="An image of a knitted snail">
                     <div class="pattern-text">
                         <h3 class="pattern-name">Snail</h3>
                         <p><b>Stitch Gauge:</b> N/A</p>
@@ -135,7 +138,7 @@
             <h2 class="pattern-type-header">Embroidery Patterns</h2>
             <div class="patterns-section">
                 <div class="pattern">
-                    <img src="images/frog-embroidery.jpg" alt="An cross stitched red eye tree frog peering round a wall">
+                    <img class="pattern-image"  src="images/frog-embroidery.jpg" alt="An cross stitched red eye tree frog peering round a wall">
                     <div class="pattern-text">
                         <h3 class="pattern-name">Frog Cross Stitch</h3>
                         <p><b>Difficulty:</b> Beginner</p>
@@ -147,7 +150,7 @@
                     </div>
                 </div>
                 <div class="pattern">
-                    <img src="images/flower-embroidery.jpg" alt="An embroidered piece with purple flowers in a brown basket">
+                    <img class="pattern-image"  src="images/flower-embroidery.jpg" alt="An embroidered piece with purple flowers in a brown basket">
                     <div class="pattern-text">
                         <h3 class="pattern-name">Lavender Embroidery</h3>
                         <p><b>Difficulty:</b> Intermediate</p>
@@ -160,5 +163,9 @@
                 </div>
 
             </div>
+
+            <footer>
+                <p>&copy; GRANDEUR GUILD OF CRAFTS - CALLA AITKEN 2024</p>
+            </footer>
             
         </main>
