--- a/coursework/event_calendar.html
+++ b/coursework/event_calendar.html
@@ -199,6 +199,8 @@
                     </tr>
                 </table>
             </div>
+
+            <!--Form for submitting event ideas-->
             <h2>Want to recommend an event? Tell us below!</h2>
             <form class="event-form" name="events">
                 <fieldset class="event-fieldset">
