--- a/coursework/index.html
+++ b/coursework/index.html
@@ -128,9 +128,11 @@ before details can be changed, emails sent to members when someone logs into the
             </div>
         </main>
 
+        <!--Section for society news-->
         <aside class="news-section">
             <h2>Latest News</h2>
 
+            <!--Div separating the image and text-->
             <div class="news-article">
                 <img class="news-image"  src="images/news-image.jpg" alt="An cross stitched red eye tree frog peering round a wall">
                 <div class="news-text">
