--- a/coursework/patterns.html
+++ b/coursework/patterns.html
@@ -52,7 +52,9 @@
 
         <main>
             <h2 class="pattern-type-header">Crochet Patterns</h2>
+            <!--Container for all crochet patterns-->
             <div class="patterns-section">
+                <!--Each pattern has it's own div containing the image, name, link and other relevant text-->
                 <div class="pattern">
                     <img class="pattern-image" src="images/crochet-dinosaurs.jpg" alt="An image of colourful crocheted dinosaurs">
                     <div class="pattern-text">
@@ -107,6 +109,7 @@
             </div>
 
             <h2 class="pattern-type-header">Knitting Patterns</h2>
+            <!--Container for all knitting patterns-->
             <div class="patterns-section">
                 <div class="pattern">
                     <img class="pattern-image"  src="images/knitted-cardigan.jpg" alt="An image of a woman wearing a yellow knitted cardigan">
@@ -136,6 +139,7 @@
             </div>
 
             <h2 class="pattern-type-header">Embroidery Patterns</h2>
+            <!--Container for all embroidery patterns-->
             <div class="patterns-section">
                 <div class="pattern">
                     <img class="pattern-image"  src="images/frog-embroidery.jpg" alt="An cross stitched red eye tree frog peering round a wall">
